2015-02-27  Mark Laws  <mdl@60hz.org>

	Support daemon mode on MS-Windows (bug#19688)
	* server.el (server-process-filter): Force GUI frames on
	MS-Windows in daemon mode, even if a TTY frame was requested.

	* frameset.el (frameset-keep-original-display-p): Don't assume
	windows-nt cannot be in daemon mode.

	* frame.el (window-system-for-display): Don't assume windows-nt
	cannot be in daemon mode.

2015-02-26  Ivan Shmakov  <ivan@siamics.net>

	* faces.el (face-list-p): Split from face-at-point.
	(face-at-point): Use it.
	* facemenu.el (facemenu-add-face): Likewise.  (Bug#19912)

2015-02-26  Oscar Fuentes  <ofv@wanadoo.es>

	* vc/vc.el (vc-annotate-switches): New defcustom.
	* vc/vc-bzr.el (vc-bzr-annotate-switches): New defcustom.
	(vc-bzr-annotate-command): Use vc-switches.
	* vc/vc-cvs.el (vc-cvs-annotate-switches): New defcustom.
	(vc-cvs-annotate-command): Use vc-switches.
	* vc/vc-git.el (vc-git-annotate-switches): New defcustom.
	(vc-git-annotate-command): Use vc-switches.
	* vc/vc-hg.el (vc-hg-annotate-switches): New defcustom.
	(vc-hg-annotate-command): Use vc-switches.
	* vc/vc-mtn.el (vc-mtn-annotate-switches): New defcustom.
	(vc-mtn-annotate-command): Use vc-switches.
	* vc/vc-svn.el (vc-svn-annotate-switches): New defcustom.
	(vc-svn-annotate-command): Use vc-switches.

2015-02-26  Alan Mackenzie  <acm@muc.de>

	Handle "#" operator properly inside macro.  Fix coding bug.

	* progmodes/cc-mode.el (c-neutralize-syntax-in-and-mark-CPP): On
	finding a "#" which looks like the start of a macro, check it
	isn't already inside a macro.

	* progmodes/cc-engine.el (c-state-safe-place): Don't record a new
	"safe" position into the list of them when this is beyond our
	current position.

2015-02-26  Martin Rudalics  <rudalics@gmx.at>

	* menu-bar.el (menu-bar-non-minibuffer-window-p): Return nil when
	the menu frame is dead.  (Bug#19728)

2015-02-26  Fabián Ezequiel Gallina  <fgallina@gnu.org>

	python.el: Handle tabs in python-indent-dedent-line.
